--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -262,6 +262,7 @@ input[type="radio"], input[type="checkbox"]{
     }
     input.input-group-field{
       height: rem-calc(50);
+      line-height: rem-calc(50);
       padding-top: rem-calc(11);
       padding-bottom: rem-calc(12);
     }
